add translations to categories and subcategories