@@ -5,6 +5,8 @@ import com.ludogorieSoft.budgetnik.config.jwt.JwtAuthenticationEntryPoint;
 import com.ludogorieSoft.budgetnik.config.jwt.JwtAuthenticationFilter;
 import com.ludogorieSoft.budgetnik.model.enums.Role;
 import java.util.Collections;
+import java.util.List;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -33,7 +35,7 @@ public class SecurityConfig {
   private final JwtAuthenticationFilter jwtAuthenticationFilter;
   private final LogoutHandler logoutHandler;
 
-  @Value("${cors.allowedOrigins}")
+  @Value("${spring.cors.allowedOrigins}")
   private String[] allowedOrigins;
 
   @Bean
@@ -69,7 +71,7 @@ public class SecurityConfig {
 
   private CorsConfigurationSource configurationSource() {
     CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
+    corsConfiguration.setAllowedOrigins(List.of(allowedOrigins));
     corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
     corsConfiguration.setAllowCredentials(true);
     corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
